force-app/main/default/objects/Adhoc_Calendar_Build_Run__e/Adhoc_Calendar_Build_Run__e.object-meta.xml
<CustomObject>
    <label>Adhoc Calendar Build Run</label>
    <pluralLabel>Adhoc Calendar Build Run</pluralLabel>
</CustomObject>