force-app/main/default/objects/Adhoc_Calendar_Build_Run__e/fields/Booking_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Booking_Strategy__c</fullName>
    <label>Booking Strategy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>