force-app/main/default/objects/Adhoc_Calendar_Build_Run__e/fields/Opportunity_Ids__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Ids__c</fullName>
    <label>Opportunity Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>